<resources>
    <string name="app_name" translatable="false">key 4 life</string>
    <string name="title_home">Profile</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="theme_renial" translatable="false">renial</string>
    <string name="theme_gliptar" translatable="false">gliptar</string>
    <string name="theme_sagrada" translatable="false">sagrada</string>
    <string name="login_title">Введіть Ваш <br /> логін та пароль</string>
    <string name="login">Логін</string>
    <string name="login_error">Поля повинні бути заповнені</string>
    <string name="login_response_error">Невірний логін або пароль</string>
    <string name="password">Пароль</string>
    <string name="enter">Ввiйти</string>
    <string name="account_title">Аккаунт</string>
    <string name="account_session_error">Вхід був проведений за допомогою іншого пристрою</string>
    <string name="dialog_logout_message">Вийти з облікового запису?</string>
    <string name="dialog_logout_ok">Вийти</string>
    <string name="new_pin_code">Введіть новый Пін-код</string>
    <string name="pin_code_title">Введіть Ваш пін-код</string>
    <string name="repeat_pin_code">Повторіть Ваш пін-код</string>
    <string name="saved_pin_code">Ваш пін-код збережений</string>
    <string name="pin_code_error">Пін-код не співпадає</string>
    <string name="drug_program_desc">Немає опису</string>
    <string name="last_registrations">Останні реєстрації</string>
    <string name="search_hint">Пошук</string>
    <string name="full_name">" Петров Іван Іванович"</string>
    <string name="enter_full_name">Введіть повне ім\'я</string>
    <string name="phone">Номер телефону</string>
    <string name="card_number">Номер картки</string>
    <string name="enter_card_number">Введіть номер картки</string>
    <string name="enter_phone_number">Введіть номер телефону</string>
    <string name="enter_sername">Введіть фамілію</string>
    <string name="second_name">Фамілія</string>
    <string name="phone_number">Номер телефону</string>
    <string name="choose_mp">Оберіть мед. представника</string>
    <string name="choose_region">Оберіть регіон</string>
    <string name="enter_region">Введіть область</string>
    <string name="region">Регіон</string>
    <string name="total_sold">Всього %1$d покупок</string>
    <string name="gender">Стать</string>
    <string name="male">Чоловіча</string>
    <string name="female">Жіноча</string>
    <string name="medical_data">Медичні дані</string>
    <string name="weight_value">80</string>
    <string name="weight">Вага, кг</string>
    <string name="enter_weight">Вага, кг</string>
    <string name="growth">Рiст, см</string>
    <string name="enter_growth">Введіть рiст</string>
    <string name="growth_value">170</string>
    <string name="dose">Доза препарату, мг</string>
    <string name="dose_value">10</string>
    <string name="heart_attack">Дата інфаркту</string>
    <string name="enter_heart_attack">Введіть дата інфаркту</string>
    <string name="drug_administration">Дата призначення препарату</string>
    <string name="enter_drug_administration">Введіть дату призначення препарату</string>
    <string name="ejection_fraction">Фракція викиду</string>
    <string name="enter_ejection_fraction">Введіть фракцію викиду</string>
    <string name="ejection_fraction_value">55</string>
    <string name="enter_potassium_start">Введіть рівень калію на початку лікування</string>
    <string name="potassium_start">Рівень калію на початку лікування, ммоль/л</string>
    <string name="potassium_start_value">3.5</string>
    <string name="enter_potassium_end">Введіть рівень калію в кінці лікування</string>
    <string name="potassium_end">Рівень калію в кінці лікування, ммоль/л</string>
    <string name="potassium_end_value">4</string>
    <string name="photo_title">Фотографія</string>
    <string name="pick_photo">Сфотографувати</string>
    <string name="gallery_title">Вибрати з галереї</string>
    <string name="pick_gallery">Вибрати з галереї</string>
    <string name="delete_image">Видалити фотографію</string>
    <string name="new_patient">Новий пацієнт</string>
    <string name="auto_fill_patient">Використати автозаповнення</string>
    <string name="enter_value">Введіть значение</string>
    <string name="date_oks">Дата ГКС</string>
    <string name="option_oks">Форма/варіант ГКС</string>
    <string-array name="coronary_angiography">
        <item name="0">Так</item>
        <item name="1">Ні</item>
        <item name="2">90/10</item>
    </string-array>
    <string name="occlusion_zone">Зона окклюзії, КА</string>
    <string name="occlusion_degree">Ступінь окклюзії коронарної  артерії, %</string>
    <string name="coronary_dominance_type">Тип домінантності коронарного кровообігу</string>
    <string name="level_hba1c">Рівень HbA1c, %</string>
    <string name="fasting_glycemia">Глікемія натще, ммоль/л</string>
    <string name="postprandial_glycemia">Постпрандіальна глікемія, ммоль/л</string>
    <string name="index_homa_ir">Iндекс HOMA-IR</string>
    <string name="sad">САТ</string>
    <string name="dad">ДАТ</string>
    <string name="imt">ІМТ</string>
    <string name="age">Вік, років</string>
    <string name="occlusion_zone_value">Басейн правої КА | басейн лівої КА</string>
    <string name="occlusion_degree_value">50</string>
    <string name="coronary_dominance_type_value">Правий</string>
    <string name="level_hba1c_value">6.5</string>
    <string name="fasting_glycemia_value">7</string>
    <string name="postprandial_glycemia_value">11.1</string>
    <string name="index_homa_ir_value">2</string>
    <string name="sad_value">100</string>
    <string name="dad_value">70</string>
    <string name="imt_value">10</string>
    <string name="age_value">40</string>
    <string name="statistic">Статистика</string>
    <string name="repeat_shopping">Повторні \n покупки</string>
    <string name="original_purchases">Первинні \nпокупки</string>
    <string name="total_purchases">Всього \nпокупок</string>
    <string name="restart">Вiдновленно</string>
    <string name="stat_purchases">Покупки</string>
    <string name="all">Усi</string>
    <string name="purchases_empty">Список порожній</string>
    <string name="without_purchases">Без покупок</string>
    <string name="with_purchases">З покупками</string>
    <string name="settings">Налаштування</string>
    <string name="russian">Росiйська</string>
    <string name="ukrainian">Українська</string>
    <string name="english">Англiйська</string>
    <string name="contact_with_us">Зв\'язатися з нами</string>
    <string name="my_profile">Мій профіль</string>
    <string name="notification">Повідомлення</string>
    <string name="enable_pin_code">Запитувати пін код</string>
    <string name="enable_finger_print">Використовувати біометрію</string>
    <string name="enable_push">Отримувати пуш повідомлення</string>
    <string name="language">Мова інтерфейсу</string>
    <string name="route">Як дістатися?</string>
    <string name="bio_lock_title">Біометрична аутентифікація</string>
    <string name="pin_code_button">Увійти по PIN-коду</string>
    <string name="feedback">Зворотній зв\'язок</string>
    <string name="feedback_title">Заголовок</string>
    <string name="feedback_enter_title">Введіть заголовок</string>
    <string name="feedback_text">Текст</string>
    <string name="feedback_enter_text">Введіть текст</string>
    <string name="send">Отправить</string>
    <string name="feedback_send_success">Повідомлення успішно відправлено</string>
    <string name="feedback_send_failure">Помилка при відправці повідомлення</string>
    <string name="achievements">Нагороди</string>
    <string name="return_achievements">Повернутися до нагород</string>
    <string name="achievements_content">Додайте 25 нових пацієнтів і куруйте їх протягом року</string>
    <string name="doctor_profile">Профіль доктора</string>
    <string name="new_doctor">Новий доктор</string>
    <string name="working_data">Робочі дані</string>
    <string name="medical">Медичний представник</string>
    <string name="new_medical">Новий мед. представник</string>
    <string name="choose_doctor">Виберіть лікарів</string>
    <string name="date_filter_title">Фільтр по даті</string>
    <string name="level_value">Рівень %s</string>
    <string name="doctor_page_title">Ви на сторінці доктора, натисніть щоб повернутися</string>
    <string name="add_new_patient">Додати нового пацієнта</string>
    <string name="date_filter">Фільтр по даті</string>
    <string name="success_saved">Дані успішно збережено</string>
    <string name="permission_denied">Відмовлено в доступі</string>
    <string name="edit">Редагувати</string>
    <string name="create">Створити</string>
    <string name="further">Далі</string>
    <string name="wait">Почекайте..</string>
    <string name="work_time">Режим работи: 8:00 — 21:00</string>
    <string name="currency" translatable="false">%s₴</string>
    <string name="notifications_empty">Немає повідомлень</string>
    <string name="notifications_unread">Непрочитане</string>
    <string name="notifications_earlier">Раніше</string>
    <string name="six">6</string>
    <string name="description_what_to_do">Після зміни мови необхідно перезапустити додаток, щоб налаштування вступили в силу.</string>
    <string name="cardiologist">Кардиолог</string>
    <string name="whole_shopping_items">Всього 8 покупок</string>
    <string name="whole_shopping_items1">Всього %1$d покупок до %2$s</string>
    <string name="dialog_logout_cancel">Скасування</string>
    <string name="vinich">Анастасия Винич</string>
    <string name="pharmacy_list">Список аптек</string>
    <string name="pharmacy_list_empty">Список порожній</string>
    <string name="pharmacy_list_error">Помилка при отриманні аптек</string>
    <string name="retry">Повторити</string>
    <string name="enter_pharmacy">Введіть назву або адресу</string>
    <string name="last_shopping">Остання покупка 01.02.2020</string>
    <string name="personal_data">Персональні дані</string>
    <string name="feedback_phone">+380666123456</string>
    <string name="telephone_number">Номер телефону</string>
    <string name="data_of_issue">Видана 26.01.2020</string>
    <string name="patient_card">Карта пацієнта</string>
    <string name="good_day_pharmacy">Аптека Доброго Дня</string>
    <string name="pharmacy_address">Велика Василькiвська, 114а​, 1 поверх​ Липки, Шевченківський район, Київ,</string>
    <string name="wholesale_pharmacy">Аптека Оптовых Цен</string>
    <string name="tas_pharmacy">Аптека TAS</string>
    <string name="monet_pharmacy">Аптека Копейка</string>
    <string name="swiss_pharmacy">Аптека Swiss Pharmacy</string>
    <string name="simple_data">10 ЛЮТОГО 2020</string>
    <string name="eugenii">Евгений Петров</string>
    <string name="last_purchases">Остання покупка в %s</string>
    <string name="renial">Ренiаль</string>
    <string name="gliptar">Гліптар</string>
    <string name="sagrada">Саграда</string>
    <string name="renial_key_life">Ренiаль – «Ключ до життя»</string>
    <string name="gliptar_key_life">Гліптар – «Ключ до балансу»</string>
    <string name="sagrada_key_life">Саграда – «Квиток у майбутне»</string>
    <string name="level_title">Рiвень</string>
    <string name="level_destination">Рівень призначення</string>
    <string name="level_purchase">Покупка</string>
    <string name="level_purchase_month">В місяць</string>
    <string name="level_purchase_limit">∞</string>
    <string name="level_purchase_primary">Первинна</string>
    <string name="level_purchase_secondary">Вторинна</string>
    <string name="level_purchase_repeat">Повторна</string>
    <string name="level_с">Рiвень С</string>
    <string name="level_b">Рiвень B</string>
    <string name="level_a">Рiвень A</string>
    <string name="need_more_buy">Потрібно ще 2 покупки для переходу на наступний рівень.</string>
</resources>