<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/dashboard"
        android:icon="@drawable/ic_main"
        android:title="@string/title_dashboard"
        app:showAsAction="always"/>

    <item
        android:id="@+id/statistics"
        android:icon="@drawable/ic_stat"
        android:title="@string/statistic"
        app:showAsAction="always"/>

    <item
        android:enabled="false"
        tools:ignore="MenuTitle" />

    <item
        android:id="@+id/notifications"
        android:icon="@drawable/ic_notifications_icon"
        android:title="@string/notification"
        app:showAsAction="always"/>

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile"
        app:showAsAction="always"/>

</menu>