<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvPatientDataCardTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telephone_number"
            android:textAppearance="@style/sf_pro_text_12"
            android:textColor="@color/gray"
            android:textSize="@dimen/default_small_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPatientDataCardValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_number"
            android:textAppearance="@style/sf_pro_semibold_16"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPatientDataCardTitle" />

        <TextView
            android:id="@+id/tvPatientDataCardDateOfIssue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_of_issue"
            android:textAppearance="@style/sf_pro_text_12"
            android:textColor="@color/gray"
            android:textSize="@dimen/patient_card_small_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPatientDataCardValue" />

        <ImageView
            android:id="@+id/ivPatientDataCardIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_camera_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/vDivideLine"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="12dp"
            android:background="@color/light_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPatientDataCardDateOfIssue" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>