<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:elevation="5dp"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="0dp"
        android:gravity="center">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:id="@+id/level_code_iv"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:src="@drawable/level_a"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/level_tv"
                android:text="@string/level_a"
                android:textColor="#818C99"
                android:textAppearance="@style/H2"
                android:layout_marginBottom="8dp"
                android:layout_gravity="bottom|center_horizontal"/>

        </FrameLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/level_card_view"
            app:cardCornerRadius="10dp"
            android:layout_margin="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                tools:ignore="DisableBaselineAlignment">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.4"
                        android:gravity="center_vertical"
                        android:lineSpacingExtra="2sp"
                        android:text="@string/level_purchase"
                        android:textColor="#99FFFFFF"
                        android:textSize="12sp"
                        android:layout_marginBottom="8dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.8"
                        android:gravity="center_vertical"
                        android:lineSpacingExtra="2sp"
                        android:text="@string/level_purchase_primary"
                        android:textAppearance="@style/sf_pro_text_16"
                        android:textColor="@color/white"
                        android:layout_marginBottom="5dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.8"
                        android:gravity="center_vertical"
                        android:lineSpacingExtra="2sp"
                        android:text="@string/level_purchase_secondary"
                        android:textAppearance="@style/sf_pro_text_16"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.4"
                        android:gravity="center_vertical"
                        android:lineSpacingExtra="2sp"
                        android:text="@string/level_purchase_month"
                        android:textColor="#99FFFFFF"
                        android:textSize="12sp"
                        android:layout_marginBottom="8dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/level_month_tv"
                        android:alpha="0.8"
                        android:gravity="center_vertical"
                        android:lineSpacingExtra="2sp"
                        android:text="16\u003C"
                        android:textAppearance="@style/sf_pro_text_16"
                        android:textColor="@color/white"
                        android:layout_marginBottom="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/level_month_second_tv"
                        android:alpha="0.8"
                        android:gravity="center_vertical"
                        android:lineSpacingExtra="2sp"
                        android:text="@string/level_purchase_limit"
                        android:textAppearance="@style/sf_pro_text_16"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.4"
                        android:gravity="center_vertical"
                        android:lineSpacingExtra="2sp"
                        android:text="@string/level_purchase_month"
                        android:textColor="#99FFFFFF"
                        android:textSize="12sp"
                        android:layout_marginBottom="8dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/level_primary_tv"
                        android:alpha="0.8"
                        android:gravity="center_vertical"
                        android:lineSpacingExtra="2sp"
                        android:text="150"
                        android:textAppearance="@style/sf_pro_text_16"
                        android:textColor="@color/white"
                        android:layout_marginBottom="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/level_secondary_tv"
                        android:alpha="0.8"
                        android:gravity="center_vertical"
                        android:lineSpacingExtra="2sp"
                        android:text="25"
                        android:textAppearance="@style/sf_pro_text_16"
                        android:textColor="@color/white" />
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>



    </LinearLayout>

</layout>