<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/tvLoginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:maxEms="6"
            android:text="@string/login_password"
            android:textAppearance="@style/H1"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/clLoginPasswordField"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clLoginPasswordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/login_input_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLoginTitle">

            <EditText
                android:id="@+id/etInputLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/login"
                android:padding="16dp"
                android:textSize="@dimen/login_input_text_size"
                app:layout_constraintBottom_toTopOf="@id/vDivideLine"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/vDivideLine"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etInputLogin" />

            <EditText
                android:id="@+id/etInputPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textSize="@dimen/login_input_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vDivideLine" />

            <CheckBox
                android:id="@+id/cbShowHide"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/ic_password_icon"
                android:button="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vDivideLine" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:paddingVertical="12dp"
            android:text="@string/enter"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:backgroundTint="?colorSecondary"
            app:cornerRadius="16dp"
            app:elevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clLoginPasswordField" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>